--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
     <section class="conteudo">
         <div class="conteudo-titulo">
-            <img src="unlock.svg" alt="cadeado fechado">
-            <h2 class="titulo-principal">Gerador de senhas</h2>
-            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+            <img class="speedimg" src="https://cdns-images.dzcdn.net/images/artist/79e9fc50b70468a42491d5fc37ff0d7d/1900x1900-000000-80-0-0.jpg" alt="cadeado fechado">
+            <h2 class="titulo-principal">Ishow speed senhas</h2>
+            <h3 class="titulo-secundario">Gere uma ishowspeed senha bem segurinha</h3>
         </div>
         <div class="conteudo-senha">
-            <label for="senha">Senha</label>
+            <label for="senha">Speed Senha</label>
             <input name="senha" type="text" id="campo-senha" readonly>
         </div>
         <div class="parametro">
-            <h3 class="parametro-titulo">Personalize sua senha</h3>
+            <h3 class="parametro-titulo">Personalize seu speed</h3>
             <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Número de caracteres</h4>
+                    <h4 class="parametro-senha__titulo">Número de caracteres do seu speed</h4>
                     <div class="parametro-senha-botoes">
                         <button class="parametro-senha__botao">-</button>
                         <p class="parametro-senha__texto">12</p>
@@ -31,10 +31,10 @@
                     </div>
                 </div>               
                 <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Características da senha</h4>
+                    <h4 class="parametro-senha__titulo">Características da speed senha</h4>
                     <div class="parametro-senha-checkbox">
                         <input name="maiusculo" type="checkbox" class="checkbox" checked>
-                        <label for="maiusculo">Letras maiúsculas</label>
+                        <label for="maiusculo">Letras Maiúsculas</label>
                     </div>
                     <div class="parametro-senha-checkbox">
                         <input name="minusculo" type="checkbox" class="checkbox">
@@ -50,13 +50,13 @@
                     </div>
                 </div>
                 <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <h4 class="parametro-senha__titulo">Força da senha speed delicia</h4>
                     <div class="barra"></div>
                     <div class="forca fraca"></div>
                     <div class="parametro-senha-textos">
-                        <p>Fraca</p>
-                        <p>Média</p>
-                        <p>Forte</p>
+                        <p>Até sua vó descobre</p>
+                        <p>Ta chegaando</p>
+                        <p>SHAKE YEAH</p>
                     </div>
                     <p class="entropia"></p>
                 </div>
