--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de senha</title>
+    <title>SPEED CRISTIANO RONALDO SENHAS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,18 +12,18 @@
     <section class="conteudo">
         <div class="conteudo-titulo">
             <img class="speedimg" src="https://cdns-images.dzcdn.net/images/artist/79e9fc50b70468a42491d5fc37ff0d7d/1900x1900-000000-80-0-0.jpg" alt="cadeado fechado">
-            <h2 class="titulo-principal">Ishow speed senhas</h2>
-            <h3 class="titulo-secundario">Gere uma ishowspeed senha bem segurinha</h3>
+            <h2 class="titulo-principal">👺Ishow speed senhas👺</h2>
+            <h3 class="titulo-secundario">👇🏾Gere uma ishowspeed senha bem segurinha👇🏾</h3>
         </div>
         <div class="conteudo-senha">
-            <label for="senha">Speed Senha</label>
+            <label for="senha">Speed Senha ⇒</label>
             <input name="senha" type="text" id="campo-senha" readonly>
         </div>
         <div class="parametro">
-            <h3 class="parametro-titulo">Personalize seu speed</h3>
+            <h3 class="parametro-titulo">Personalize seu speed👽</h3>
             <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Número de caracteres do seu speed</h4>
+                    <h4 class="parametro-senha__titulo">Número de caracteres do seu speed🤡</h4>
                     <div class="parametro-senha-botoes">
                         <button class="parametro-senha__botao">-</button>
                         <p class="parametro-senha__texto">12</p>
@@ -31,32 +31,32 @@
                     </div>
                 </div>               
                 <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Características da speed senha</h4>
+                    <h4 class="parametro-senha__titulo">👃🏾Características da speed senha</h4>
                     <div class="parametro-senha-checkbox">
                         <input name="maiusculo" type="checkbox" class="checkbox" checked>
-                        <label for="maiusculo">Letras Maiúsculas</label>
+                        <label for="maiusculo">Letras Maiúsculas SPEED🤪</label>
                     </div>
                     <div class="parametro-senha-checkbox">
                         <input name="minusculo" type="checkbox" class="checkbox">
-                        <label for="minusculo">Letras minúsculas</label>
+                        <label for="minusculo">Letras minúsculas speed</label>
                     </div>
                     <div class="parametro-senha-checkbox">
                         <input name="numero" type="checkbox" class="checkbox">
-                        <label for="numero">Números</label>
+                        <label for="numero">Números speeds</label>
                     </div>
                     <div class="parametro-senha-checkbox">
                         <input name="simbolo" type="checkbox" class="checkbox">
-                        <label for="simbolo">Símbolos</label>
+                        <label for="simbolo">Símbolos speed 🥵</label>
                     </div>
                 </div>
                 <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Força da senha speed delicia</h4>
+                    <h4 class="parametro-senha__titulo">Força da senha speed delicia🥵</h4>
                     <div class="barra"></div>
                     <div class="forca fraca"></div>
                     <div class="parametro-senha-textos">
-                        <p>Até sua vó descobre</p>
-                        <p>Ta chegaando</p>
-                        <p>SHAKE YEAH</p>
+                        <p>Até sua vó descobre💩</p>
+                        <p>Ta chegaando🤏🏾</p>
+                        <p>SHAKE YEAH🤟🏾</p>
                     </div>
                     <p class="entropia"></p>
                 </div>
